Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.6.12, 10.5.22, 10.6.15, 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.9(EOL), 10.10(EOL), 10.11, 11.0(EOL), 12.2(EOL)
-
10.6.12-MariaDB-0ubuntu0.22.04.1 Ubuntu 22.04
and
Ubuntu 19.10 / MariaDB-1:10.4.14
-
Can result in hang or crash
-
An unresolvable outer reference can cause a server to crash.
Description
CREATE OR REPLACE TEMPORARY TABLE a ( |
ID INT |
);
|
|
|
CREATE OR REPLACE TEMPORARY TABLE b ( |
ID INT |
);
|
|
|
CREATE OR REPLACE TEMPORARY TABLE c ( |
ID INT |
);
|
|
|
CREATE OR REPLACE TEMPORARY TABLE d ( |
ID INT |
);
|
|
|
-- Query A
|
SELECT 'A' |
UNION
|
SELECT 'B' |
UNION
|
SELECT DISTINCT 1 |
FROM a |
INNER JOIN b |
on a.ID = b.ID AND EXISTS (SELECT * FROM d WHERE b.ID = c.ID ) |
INNER JOIN c |
on b.ID = c.ID; |
|
|
-- Query B
|
SELECT DISTINCT 1 |
FROM a |
INNER JOIN b |
on a.ID = b.ID AND EXISTS (SELECT * FROM d WHERE b.ID = c.ID ) |
INNER JOIN c |
on b.ID = c.ID; |
On 10.4 :
Query A and B : OK (no syntax error : Unknown column 'c.ID' in 'where clause')
On 10.6 :
Query B : KO syntax error : Unknown column 'c.ID' in 'where clause'
Query A : KO Lost connection to server during query (and mariadb restart)
Attachments
Issue Links
- relates to
-
MDEV-25346 Server crashes in Item_field::fix_outer_field upon subquery with unknown column
-
- Closed
-
-
MDEV-32381 Segmentation fault at /mariadb-11.3.0/sql/item.cc:5669
-
- Stalled
-